EKS/aline-gateway-aws.yaml
# aline-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aline-gateway
  labels: 
    app: aline-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aline-gateway
  template:
    metadata:
      labels:
        app: aline-gateway
    spec:
      containers:
      - name: aline-gateway
        image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-jp:aline-gateway-jenkins-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
