EKS/bank-micro-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-micro
  labels:
    app: bank-micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-micro
  template:
    metadata:
      labels:
        app: bank-micro
        target: microservice
    spec:
      containers:
        - name: bank-micro
          image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-jp:bank-micro-jenkins-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: bank-ms-nodeport
# spec:
#   type: ClusterIP
#   selector:
#     app: bank-micro
#   ports:
#     - protocol: TCP
#       port: 8083
#       targetPort: 8083
