EKS/member-portal-aws.yaml
# portal-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member-portal
  template:
    metadata:
      labels:
        app: member-portal
    spec:
      containers:
      - name: member-portal
        image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-jp:member-dashboard-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4200
