EKS/transaction-micro-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-micro
  labels:
    app: transaction-micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-micro
  template:
    metadata:
      labels:
        app: transaction-micro
        target: microservice
    spec:
      containers:
        - name: transaction-micro
          image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-jp:trans-micro-jenkins-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8073
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: transaction-ms-nodeport
# spec:
#   type: ClusterIP
#   selector:
#     app: transaction-micro
#   ports:
#     - protocol: TCP
#       port: 8073
#       targetPort: 8073
