EKS/account-micro-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-micro
  labels:
    app: account-micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-micro
  template:
    metadata:
      labels:
        app: account-micro
        target: microservice
    spec:
      containers:
        - name: account-micro
          image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-jp:account-micro-jenkins-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8072
---
apiVersion: v1
kind: Service
metadata:
  name: account-ms-nodeport
spec:
  type: ClusterIP
  selector:
    app: account-micro
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
