EKS/admin-portal-aws.yaml
# portal-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-portal
  labels:
    app: admin-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-portal
  template:
    metadata:
      labels:
        app: admin-portal
        target: portals
    spec:
      containers:
      - name: admin-portal
        image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-jp:admin-aws-v3
        ports:
        - containerPort: 3000
---
# portal-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-lb
spec:
  type: LoadBalancer
  selector:
    app: admin-portal
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
