EKS/landing-portal-aws.yaml
# portal-landing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-portal
  labels:
    app: landing-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-portal
  template:
    metadata:
      labels:
        app: landing-portal
        target: portals
    spec:
      containers:
      - name: landing-portal
        image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-jp:landing-aws-v1
        ports:
        - containerPort: 3007
---
# portal-landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-lb
spec:
  type: LoadBalancer
  selector:
    app: landing-portal
  ports:
    - protocol: TCP
      port: 3007
      targetPort: 80
