EKS/services-micro-aws.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-ms-nodeport
spec:
  type: ClusterIP
  selector:
    app: user-micro
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070


---
apiVersion: v1
kind: Service
metadata:
  name: under-ms-nodeport
spec:
  type: ClusterIP
  selector:
    app: underwriter-micro
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8071

---
apiVersion: v1
kind: Service
metadata:
  name: transaction-ms-nodeport
spec:
  type: ClusterIP
  selector:
    app: transaction-micro
  ports:
    - protocol: TCP
      port: 8073
      targetPort: 8073

---
apiVersion: v1
kind: Service
metadata:
  name: bank-ms-nodeport
spec:
  type: ClusterIP
  selector:
    app: bank-micro
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083

---
apiVersion: v1
kind: Service
metadata:
  name: account-ms-nodeport
spec:
  type: ClusterIP
  selector:
    app: account-micro
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
