EKS/underwriter-micro-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: underwriter-micro
  labels:
    app: underwriter-micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: underwriter-micro
  template:
    metadata:
      labels:
        app: underwriter-micro
        target: microservice
    spec:
      containers:
        - name: underwriter-micro
          image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-jp:underwriter-micro-jenkins-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8071
---
apiVersion: v1
kind: Service
metadata:
  name: under-ms-nodeport
spec:
  type: ClusterIP
  selector:
    app: underwriter-micro
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8071
