EKS/user-micro-aws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-micro
  labels:
    app: user-micro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-micro
  template:
    metadata:
      labels:
        app: user-micro
        target: microservice
    spec:
      containers:
        - name: user-micro
          image: 767397723308.dkr.ecr.us-east-1.amazonaws.com/aline-financial-jp:user-micro-11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8070
# ---
apiVersion: v1
kind: Service
metadata:
  name: user-ms-nodeport
spec:
  type: ClusterIP
  selector:
    app: user-micro
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
